--- a/Backend For All (MERN, MENN, MEFN)/backend/package.json
+++ b/Backend For All (MERN, MENN, MEFN)/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "uuid": "^11.1.0"
   }
 }
